src/objects/IMS_Use_Offering_Atypical_Combination__c.object
<CustomObject>
    <fields>
        <fullName>Action_Needed_By__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor - Use Secondary Review by Mgmt</fullName>
                </value>
                <value>
                    <fullName>Vendor - Use Secondary Review by Legal</fullName>
                </value>
                <value>
                    <fullName>Vendor - Use - Offering Secondary Review by Mgmt</fullName>
                </value>
                <value>
                    <fullName>Vendor - Use - Offering Secondary Review by Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Review_Email__c</fullName>
        <label>TPA Sec Review Assigned Legal Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Name__c</fullName>
        <label>TPA Sec Review Assigned Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mgmt_Review_Name__c</fullName>
        <label>TPA Secondary Review Assigned Mgmt Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mgmt_Review_email__c</fullName>
        <label>TPA Secondary Review Assigned Mgmt Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Category__c</fullName>
        <description>Category of the selected offering.</description>
        <formula>TEXT( Offering_Name__r.Geo_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Category of the selected offering.</inlineHelpText>
        <label>Offering Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Country__c</fullName>
        <label>Country of Offerings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belgium &amp; Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_Country_del__c</fullName>
        <label>Offering Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering Name</label>
        <referenceTo>IMS_Data_Asset__c</referenceTo>
        <relationshipLabel>IMS Use Offering Atypical Combinations</relationshipLabel>
        <relationshipName>IMS_Use_Offering_Atypical_Combinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Offering_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Offering Name</label>
        <referenceTo>IMS_Secondary_Data_Asset__c</referenceTo>
        <relationshipLabel>IMS Use Offering Atypical Combinations</relationshipLabel>
        <relationshipName>IMS_Use_Offering_Atypical_Combinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Use_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Category</label>
        <referenceTo>TPA_Purpose_Category__c</referenceTo>
        <relationshipLabel>IMS Use Offering Atypical Combinations</relationshipLabel>
        <relationshipName>IMS_Use_Offering_Atypical_Combinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Use_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Name</label>
        <referenceTo>IMS_TPA_Purpose__c</referenceTo>
        <relationshipLabel>IMS Use Offering Atypical Combinations</relationshipLabel>
        <relationshipName>IMS_Use_Offering_Atypical_Combinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>IMS Use Offering Atypical Combinations</relationshipLabel>
        <relationshipName>IMS_Use_Offering_Atypical_Combinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Approved_For_Future__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Approved For Future</label>
        <type>Checkbox</type>
    </fields>
    <label>IMS Use Offering Atypical Combination</label>
    <listViews>
        <fullName>ALL_Records</fullName>
        <columns>NAME</columns>
        <columns>Use_Category__c</columns>
        <columns>Use_Name__c</columns>
        <columns>Offering_Country_del__c</columns>
        <columns>Offering_Name__c</columns>
        <columns>Secondary_Offering_Name__c</columns>
        <columns>is_Approved_For_Future__c</columns>
        <columns>isActive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TPA_Secondary_Reviews</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Offering_Country_del__c</columns>
        <columns>Offering_Category__c</columns>
        <columns>Offering_Name__c</columns>
        <columns>Secondary_Offering_Name__c</columns>
        <columns>Use_Category__c</columns>
        <columns>Use_Name__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Mgmt_Review_email__c</columns>
        <columns>Mgmt_Review_Name__c</columns>
        <columns>Legal_Review_Email__c</columns>
        <columns>Legal_Review_Name__c</columns>
        <columns>isActive__c</columns>
        <columns>is_Approved_For_Future__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IMS_Use_Offering_Atypical_Combination__c.TPA_Secondary_Reviews</value>
        </filters>
        <label>TPA Secondary Reviews</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UseOffComb-{0000}</displayFormat>
        <label>IMS Use Offering Atypical Combination Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMS Use Offering Atypical Combinations</pluralLabel>
    <recordTypes>
        <fullName>TPA_Secondary_Reviews</fullName>
        <active>true</active>
        <label>TPA Secondary Reviews</label>
    </recordTypes>
    <recordTypes>
        <fullName>Use_Offering_Atypical_Combination</fullName>
        <active>true</active>
        <label>Use Offering Atypical Combination</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>